--- a/Goofy/requirements.txt
+++ b/Goofy/requirements.txt
@@ -1,81 +1,36 @@
-absl-py==2.1.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 anyio==4.4.0
 asgiref==3.8.1
-astunparse==1.6.3
+async-timeout==4.0.3
 attrs==23.2.0
-beautifulsoup4==4.12.3
-blinker==1.8.2
 Brotli==1.1.0
-certifi==2024.7.4
+certifi==2024.6.2
 cffi==1.16.0
 charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==43.0.0
-Django==5.0.7
-django-allauth==0.63.6
-filelock==3.15.4
-fire==0.6.0
-Flask==3.0.3
-flatbuffers==24.3.25
+cryptography==42.0.8
+Django==5.0.6
+django-allauth==0.63.3
+exceptiongroup==1.2.2
 frozenlist==1.4.1
-gast==0.6.0
-gdown==5.2.0
-google-pasta==0.2.0
-grpcio==1.65.4
-gunicorn==22.0.0
 h11==0.14.0
-h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
-keras==3.4.1
-libclang==18.1.1
-lxml==5.2.2
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-ml-dtypes==0.4.0
 multidict==6.0.5
 mutagen==1.47.0
-namex==0.0.8
-numpy==1.26.4
-opt-einsum==3.3.0
-optree==0.12.1
-packaging==24.1
-pandas==2.2.2
 pillow==10.4.0
-protobuf==4.25.4
 psycopg2==2.9.9
 pycparser==2.22
 pycryptodomex==3.20.0
-Pygments==2.18.0
 PyJWT==2.8.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
 requests==2.32.3
-rich==13.7.1
-six==1.16.0
 sniffio==1.3.1
-soupsieve==2.5
-sqlparse==0.5.1
-tensorboard==2.17.0
-tensorboard-data-server==0.7.2
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-tqdm==4.66.4
+sqlparse==0.5.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 websockets==12.0
-Werkzeug==3.0.3
-wrapt==1.16.0
 yarl==1.9.4
-yt-dlp==2024.7.25
-ytmusicapi==1.8.0
+yt-dlp==2024.7.16
+ytmusicapi==1.7.3
